format entire codebase with new google-java-format version